--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,10 +14,6 @@
 /*-----------------------------------*\
   #CUSTOM PROPERTY
 \*-----------------------------------*/
-/* ---- reset ---- */
-
-
-/* ---- particles.js container ---- */
 #particles-js {
   width: 100%;
   height: 100%;
@@ -32,6 +28,7 @@
   left: 0;
   z-index: -1; /* Send it to the background */
 }
+
 
 :root {
 
@@ -53,7 +50,7 @@
   ), hsl(240, 2%, 13%);
   --bg-gradient-yellow-1: linear-gradient(
     to bottom right, 
-    hsl(0, 0%, 100%) 0%, 
+    hsl(45, 100%, 71%) 0%, 
     hsla(36, 100%, 69%, 0) 50%
   );
   --bg-gradient-yellow-2: linear-gradient(
@@ -68,8 +65,8 @@
   );
   --text-gradient-yellow: linear-gradient(
     to right, 
-    hsl(0, 0%, 99%), 
-    hsl(0, 0%, 100%)
+    hsl(45, 100%, 72%), 
+    hsl(35, 100%, 68%)
   );
 
   /* solid */
@@ -78,14 +75,14 @@
   --onyx: hsl(240, 1%, 17%);
   --eerie-black-1: hsl(240, 2%, 13%);
   --eerie-black-2: hsl(240, 2%, 12%);
-  --smoky-black: hsl(0, 0%, 100%);
+  --smoky-black: hsl(0, 0%, 7%);
   --white-1: hsl(0, 0%, 100%);
   --white-2: hsl(0, 0%, 98%);
-  --orange-yellow-crayola: hsl(0, 0%, 100%);
-  --vegas-gold: hsl(0, 0%, 100%);
+  --orange-yellow-crayola: hsl(45, 100%, 72%);
+  --vegas-gold: hsl(45, 54%, 58%);
   --light-gray: hsl(0, 0%, 84%);
   --light-gray-70: hsla(0, 0%, 84%, 0.7);
-  --bittersweet-shimmer: hsl(0, 0%, 100%);
+  --bittersweet-shimmer: hsl(0, 43%, 51%);
 
   /**
    * typography
@@ -137,11 +134,11 @@
   #RESET
 \*-----------------------------------*/
 
-/* *, *::before, *::after {
+*, *::before, *::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-} */
+}
 
 a { text-decoration: none; }
 
